[dev][mockup] index mockup with styles

--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
-index
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <title>index mockup</title>
+        <link href="reset.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
+        <!--[if !IE]>-->
+        <style type="text/css">
+                            body {font-size:16px;}
+        </style>
+        <!--<[endif]-->
+        <script src="//code.jquery.com/jquery-1.9.1.js"></script>
+        <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+    </head>
+    <body>
+    	<header>
+            <div class="wrapper">
+    		<h1>Vinohradska85</h1>
+            <div class="background-title">Vinohradska85</div>
+            <q>...Your place to live</q>
+            <nav>
+                <ul>
+                    <li>CZ</li>
+                    <li>EN</li>
+                </ul>
+            </nav>
+            </div>
+    	</header>
+
+    	<section id="main">
+            <div class="wrapper">
+            <aside>
+                <nav>
+                    <ul>
+                        <li><a href="">home</a></li>
+                        <li><a href="">home</a></li>
+                        <li><a href="">home</a></li>
+                        <li><a href="">home</a></li>
+                        <li><a href="">home</a></li>
+                        <li><a href="">home</a></li>
+                        <li><a href="">home</a></li>
+                    </ul>
+                </nav>
+            </aside>
+            <article>
+            
+            <section id="box1">
+                <h1>Nadpis</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Turpe inveniri aristoteli libidinem diis cupiditates omittendis summam depravate didicisse, alios, iudicant ingenii, synephebos animal optime horrida cumanum ex nostrum pondere adamare, involuta probatus placebit gravissimas lictores u
+                </p>
+                <p>
+                    triusque antiquitate alienum, carere, moderatius, admonere temperantia adquiescere homero monstruosi easque quosque quorum gravis me. Utrum maximi iudicare desistemus ipsarum audeam exaudita, mors erga quisquam permulta inflammati faciant dices ita ferentur eosdem. Quosvis quoque mi ferantur beatae, gratia unde diceret referta, accusantium ornamenta reque, percussit.
+                </p>
+            </section>
+            <section id="box2">
+                <img class="large" src="" />
+                <img class="thumb" src="" />
+                <img class="thumb" src="" />
+                <img class="thumb" src="" />
+            </section>
+            <div class="box-clear"></div>
+            <section id="box">
+                <h2>nadpis</h2>
+                <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Turpe inveniri aristoteli libidinem diis cupiditates omittendis summam depravate didicisse, alios    
+                </p>
+            </section>
+            <section id="box">
+                <h2>nadpis</h2>
+                <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Turpe inveniri aristoteli libidinem diis cupiditates omittendis summam depravate didicisse, alios    
+                </p>
+            </section>
+            <section id="box">
+                <h2>nadpis</h2>
+                <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Turpe inveniri aristoteli libidinem diis cupiditates omittendis summam depravate didicisse, alios    
+                </p>
+            </section>
+
+            </article>
+            </div>
+    	</section>
+
+    	<footer>
+            <div class="wrapper">
+    		<article>
+                <p>
+                    address<br>
+                    contact
+                </p>
+            </article>
+            </div>
+    	</footer>
+
+    </body>
+</html>
