--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>index mockup</title>
-        <link href="reset.css" rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
+        <link href="style/css/style.css" rel="stylesheet">
         <!--[if !IE]>-->
         <style type="text/css">
-                            body {font-size:16px;}
+            body {font-size:16px;}
         </style>
         <!--<[endif]-->
         <script src="//code.jquery.com/jquery-1.9.1.js"></script>
